--- a/bootstrap/css/appmain.css
+++ b/bootstrap/css/appmain.css
@@ -10,6 +10,42 @@ header,footer {
 }
 
 img {
+	width: 100%;
+	height: 100%;
 	max-width: 500px;
-    height: 100px;
+    height: 275px;
+}
+
+aside {
+	background-color: #EAF1FD;
+	text-align: center;
+	padding-top: 40px;
+}
+
+.skill-list {
+	padding-bottom: 40px;
+	padding-top: 40px;
+
+}
+.skill-title {
+	margin-bottom: 10px;
+	margin-top: 5px;
+	color: #ff6f69;
+	font-weight: bold;
+}
+
+article {
+	padding: 40px;
+}
+
+article img {
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	box-shadow: 6px 6px 8px #777;
+	margin-bottom: 20px;
+}
+
+article p {
+	font-size: 16px;
 }
