--- a/bootstrap/css/appmain.css
+++ b/bootstrap/css/appmain.css
@@ -2,6 +2,13 @@ body {
 	font-family: 'Open Sans', sans-serif;
 }
 
+.navbar {
+	margin-bottom: 0px;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: #BBB;
+}
 footer {
 	background-color: #3E3E3E;
 	color: #F6F6F6;
