--- a/bootstrap/css/appmain.css
+++ b/bootstrap/css/appmain.css
@@ -1,13 +1,22 @@
 body {
 	font-family: 'Open Sans', sans-serif;
+	padding-top: 75px;
 }
 
 .navbar {
 	margin-bottom: 0px;
+	padding: 30px 15px;
+	-webkit-transition: all 0.5s;
+	transition: all 0.5s;
 }
 
 .navbar-inverse .navbar-nav>li>a {
     color: #BBB;
+}
+.cbp-af-header-shrink {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	opacity: 0.9;
 }
 footer {
 	background-color: #3E3E3E;
